--- a/BillBuddy/Config/Info.plist
+++ b/BillBuddy/Config/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -11,7 +9,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>billbuddybuddy</string>
+				<string>com.googleusercontent.apps.11733718181-lokjung7j7e74g2n4sjpvffkcdr2bbnn</string>
 			</array>
 		</dict>
 	</array>
