--- a/BillBuddy/Config/Info.plist
+++ b/BillBuddy/Config/Info.plist
@@ -12,6 +12,14 @@
 				<string>com.googleusercontent.apps.11733718181-okd4pf8djj6lqjmr34bhjtjgm69hphsf</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>billbuddybuddy</string>
+			</array>
+		</dict>
 	</array>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-4634552659933346~7460949431</string>
